fix: view images gallery version mobile

--- a/components/header/Header.module.css
+++ b/components/header/Header.module.css
@@ -36,7 +36,7 @@
 }
 
 .logo_desktop{
-  width: 170px;
+  width: 160px;
 }
 
 .links ul {
